Combinador child y descendiente

--- a/Curso definitivo html y css/combinadores/style.css
+++ b/Curso definitivo html y css/combinadores/style.css
@@ -5,6 +5,18 @@
 
 /* Hernano general */
 
-h2 ~ p {
+/* h2 ~ p {
+    color: red;
+} */
+
+/* Combinador child */
+
+/* div > p {
+    color: red;
+} */
+
+/* Descendiente */
+
+div p {
     color: red;
 }
