--- a/Curso definitivo html y css/medidas/style.css
+++ b/Curso definitivo html y css/medidas/style.css
@@ -1,4 +1,4 @@
-main {
+/* main {
     background-color: red;
     width: 100%;
     height: 500px;
@@ -6,4 +6,16 @@ main {
 p {
     font-size: 16px;
     margin: 0;
+} */
+
+/* body {
+    font-size: 20px;
+} */
+
+.text-container {
+    font-size: 1.5em;
+}
+
+.text-container div {
+    font-size: 1.5em;
 }
