--- a/Curso definitivo html y css/display/style-reto.css
+++ b/Curso definitivo html y css/display/style-reto.css
@@ -46,6 +46,11 @@ html {
     width: 74.5%;
     height: 40rem;
     margin: 0;
+    position: absolute;
+}
+
+.section-content article {
+    padding: 1rem;
 }
 
 .aside-left article {
@@ -57,6 +62,6 @@ html {
     text-align: center;
 }
 
-.section-view {
+/* .section-view {
     display: flex;
-}
+} */
