--- a/google clon/css/main.css
+++ b/google clon/css/main.css
@@ -5,6 +5,8 @@ body {
     font-family: Arial, Helvetica, sans-serif;
 }
 
+/* header */
+
 header {
     width: 100%;
     height: 60px;
@@ -47,3 +49,21 @@ nav .nav-right-section img {
     border-radius: 50%;
     margin-left: 10px;
 }
+
+/* main */
+
+main {
+    margin-top: 150px;
+    text-align: center;
+}
+
+main .main-logo {
+    width: 530px;
+    margin: 0 auto;
+    margin-bottom: 35px;
+}
+
+main .main-logo img {
+    width: 300px;
+}
+
